test/typecheck/y_error_13.j.gold
./y_error_13.j:14:9: error: invalid void return in function returning 'Int'
    |
 14 |     return;
    |     ^
